--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,13 @@
 p.about {
-    display: inline;
+    display: inline-block;
     font-size: 12px;
     position: top left;
 }
 
 img {
-    display: inline;
+    display: inline-block;
+    height: 100px;
+    width: 300px;
     margin: auto;
 
 }
