--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,10 @@
 img {
     display: inline-block;
+    position: absolute;
+    top: 200px;
+    left: 400px;
     height: 100px;
     width: 300px;
-    position: center;
+    
 
 }
