--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
 img {
     display: inline-block;
     position: absolute;
-    margin: auto;
-    top: 150px;
+    top: 175px;
+    left: 500px; 
     height: 100px;
     width: 300px;
     
