--- a/styles.css
+++ b/styles.css
@@ -31,24 +31,32 @@ ul {
     top: 0;
     width: 100%;
   }
+   
 
-  .bottom {    
-    display: block;
-    color: black;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: white;
-    float: left;
-
-
+  .Bottom {
+    ul {
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+      overflow: hidden;
+      background-color: white;
+    }
+    li {
+      float: left;
+    }
+    li a {
+      display: block;
+      color: black;
+      text-align: center;
+      padding: 14px 16px;
+      text-decoration: none;
+    }
+    ul {
+      position: fixed;
+      bottom: 0;
+      width: 100%;
+    }
+     
 
 
   }
