--- a/styles.css
+++ b/styles.css
@@ -31,13 +31,12 @@ ul {
     top: 0;
     width: 100%;
   }
-.Bottom {
-    
+div  {
   list-style-type: none;
   margin: 0;
   padding: 0;
   overflow: hidden;
   background-color: white;
-  
+   
 }   
 
